--- a/api/PaganOnline.DataManager.API.csproj
+++ b/api/PaganOnline.DataManager.API.csproj
@@ -17,6 +17,9 @@
       <Compile Update="Models\DataManagerContext.Character.cs">
         <DependentUpon>DataManagerContext.cs</DependentUpon>
       </Compile>
+      <Compile Update="Models\DataManagerContext.Skill.cs">
+        <DependentUpon>DataManagerContext.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
